--- a/programs/cryptails/Cargo.toml
+++ b/programs/cryptails/Cargo.toml
@@ -18,3 +18,4 @@ default = []
 [dependencies]
 anchor-lang = {path="../../../anchor/lang"}
 anchor-spl = {path="../../../anchor/spl"}
+spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
