--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-    "scripts":{
-      "create": "ANCHOR_PROVIDER_URL=http://localhost:8899 ANCHOR_WALLET=/home/apokh/.config/solana/id.json node app/create.js",
-      "list": "ANCHOR_PROVIDER_URL=http://localhost:8899 ANCHOR_WALLET=/home/apokh/.config/solana/id.json node app/list.js",
-      "mp-list": "ANCHOR_PROVIDER_URL=http://localhost:8899 ANCHOR_WALLET=/home/apokh/.config/solana/id.json node app/mp-list.js",
-      "mp-sell": "ANCHOR_PROVIDER_URL=http://localhost:8899 ANCHOR_WALLET=/home/apokh/.config/solana/id.json node app/mp-sell.js",
-      "transfer": "ANCHOR_PROVIDER_URL=http://localhost:8899 ANCHOR_WALLET=/home/apokh/.config/solana/id.json node app/transfer.js",
-      "mp-sell-list": "ANCHOR_PROVIDER_URL=http://localhost:8899 ANCHOR_WALLET=/home/apokh/.config/solana/id.json node app/mp-sell-list.js"
+    "scripts": {
+        "create": "ANCHOR_PROVIDER_URL=http://localhost:8899 ANCHOR_WALLET=/home/apokh/.config/solana/id.json node scripts/create.js",
+        "list": "ANCHOR_PROVIDER_URL=http://localhost:8899 ANCHOR_WALLET=/home/apokh/.config/solana/id.json node scripts/list.js",
+        "mp-list": "ANCHOR_PROVIDER_URL=http://localhost:8899 ANCHOR_WALLET=/home/apokh/.config/solana/id.json node scripts/mp-list.js",
+        "mp-sell": "ANCHOR_PROVIDER_URL=http://localhost:8899 ANCHOR_WALLET=/home/apokh/.config/solana/id.json node scripts/mp-sell.js",
+        "transfer": "ANCHOR_PROVIDER_URL=http://localhost:8899 ANCHOR_WALLET=/home/apokh/.config/solana/id.json node scripts/transfer.js",
+        "mp-sell-list": "ANCHOR_PROVIDER_URL=http://localhost:8899 ANCHOR_WALLET=/home/apokh/.config/solana/id.json node scripts/mp-sell-list.js"
     },
     "dependencies": {
         "@project-serum/anchor": "^0.19.0",
-        "@solana/spl-token": "^0.1.6"
+        "@project-serum/common": "0.0.1-beta.3",
+        "@solana/spl-token": "^0.1.6",
+        "@solana/wallet-adapter-base": "^0.8.1",
+        "@solana/wallet-adapter-react": "^0.14.1",
+        "@solana/wallet-adapter-react-ui": "^0.7.0",
+        "@solana/wallet-adapter-wallets": "^0.13.0"
     },
     "devDependencies": {
         "chai": "^4.3.4",
